[FIX] web_studio: correctly size the hooks
Hooks in absolute position were too long because they lacked a parent
in relative positioning.
We have added a style on div.page to ensure it is in position relative
for the reports in studio.

--- a/web_studio/static/src/scss/report_iframe.scss
+++ b/web_studio/static/src/scss/report_iframe.scss
@@ -7,6 +7,10 @@
     font-size: 14px;
 }
 
+div.page {
+    position: relative;
+}
+
 .o_no_content_helper {
     border: 2px dashed gray('400');
     margin-top: 10px;
